# api2mcp

./: .env.example  .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  Dockerfile  GOVERNANCE.md  LICENSE  README.md  ROADMAP.md  SECURITY.md  SUPPORT.md  THREAT_MODEL.md  docker-compose.yml  index.html  mkdocs.yml  objects.inv  pyproject.toml  pyrightconfig.json  sitemap.xml
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: question.md
.github/workflows/: ci.yml  dependency-review.yml  docs.yml  release.yml
contributing/: index.html
demo/: .api2mcp.yaml  README.md  notes_api.py  run-demo-advanced.ps1  run-demo-advanced.sh  run-demo.ps1  run-demo.sh  task_api.py
demo-langgraph/: .env.example  01_reactive_agent.py  02_planner_agent.py  03_conversational_agent.py  04_streaming.py  05_checkpointing.py  README.md  llm_factory.py  run-demo.ps1  run-demo.sh
demo-langgraph/backends/: notes_api.py
demo-live-api/: README.md  run-demo-multi.ps1  run-demo-multi.sh  run-demo.ps1  run-demo.sh  test-tool-routing.ps1  test-tool-routing.sh
docs/: contributing.md  getting-started.md  index.md  ir-schema.md  runbook.md  threat-model.md
docs/examples/: github.md  multi-api.md  stripe.md
docs/reference/: cli.md  config.md
docs/reference/api/: index.md
docs/tutorials/: auth.md  basic.md  multi-api.md  orchestration.md
examples/: README.md  conversational_agent.py  github_to_mcp.py  multi_api_orchestration.py  quickstart.py  sample-IR.md  stripe_to_mcp.py
examples/github/: index.html
examples/multi-api/: index.html
examples/stripe/: index.html
getting-started/: index.html
ir-schema/: index.html
open-source/: CHANGELOG.md  CONTRIBUTING.md  OPEN_SOURCE_CHECKLIST.md  SECURITY.md  SUPPORT.md
open-source/.github/: CODEOWNERS
open-source/.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
reference/api/: index.html
reference/cli/: index.html
reference/config/: index.html
runbook/: index.html
schemas/: api2mcp-config.schema.json  feature-spec.schema.json
search/: search_index.json
src/api2mcp/: __init__.py
src/api2mcp/auth/: __init__.py  base.py  factory.py  token_store.py
src/api2mcp/cache/: __init__.py  base.py  config.py  disk.py  headers.py  memory.py  middleware.py  redis.py
src/api2mcp/circuitbreaker/: __init__.py  config.py  exceptions.py  middleware.py  state.py
src/api2mcp/cli/: __init__.py  config.py  main.py  output.py
src/api2mcp/concurrency/: __init__.py  config.py  exceptions.py  executor.py  limiter.py  middleware.py  tracker.py
src/api2mcp/core/: __init__.py  diff.py  exceptions.py  ir_schema.py  parser.py  validator.py
src/api2mcp/discovery/: __init__.py  discoverer.py
src/api2mcp/generators/: __init__.py  exporter.py  naming.py  prompt.py  resource.py  schema_mapper.py  tool.py
src/api2mcp/hotreload/: __init__.py  restart.py  watcher.py
src/api2mcp/observability/: __init__.py  metrics.py  tracing.py
src/api2mcp/orchestration/: __init__.py  errors.py  llm.py  streaming.py
src/api2mcp/parsers/: __init__.py  graphql.py  openapi.py  postman.py  swagger.py
src/api2mcp/plugins/: __init__.py  base.py  dependency.py  discovery.py  hooks.py  manager.py  sandbox.py
src/api2mcp/pool/: __init__.py  config.py  health.py  manager.py  retry.py
src/api2mcp/ratelimit/: __init__.py  bucket.py  config.py  exceptions.py  headers.py  middleware.py  retry.py
src/api2mcp/runtime/: __init__.py  health.py  middleware.py  request_logger.py  server.py  streaming.py  transport.py
src/api2mcp/secrets/: __init__.py  base.py  factory.py  masking.py
src/api2mcp/templates/: __init__.py  installer.py  manifest.py  registry.py
src/api2mcp/testing/: __init__.py  client.py  coverage.py  mock_generator.py  snapshot.py
src/api2mcp/utils/: __init__.py  merge.py  serialization.py  timestamps.py
src/api2mcp/validation/: __init__.py  exceptions.py  limits.py  pipeline.py  sanitizer.py  schema.py
tests/benchmarks/: __init__.py  test_parser_performance.py
tests/e2e/: __init__.py  test_full_pipeline.py  test_orchestration_pipeline.py
tests/fixtures/: invalid-missing-info.yaml  petstore-3.1.yaml  petstore.yaml
tests/integration/auth/: test_oauth2_integration.py
tests/integration/cache/: test_cache_integration.py
tests/integration/circuitbreaker/: test_circuit_breaker_integration.py
tests/integration/cli/: test_cli_integration.py  test_wizard_integration.py
tests/integration/concurrency/: test_concurrency_integration.py
tests/integration/discovery/: test_discovery_integration.py
tests/integration/generators/: test_tool_pipeline.py
tests/integration/hotreload/: test_hotreload_integration.py
tests/integration/orchestration/: test_adapter_integration.py  test_checkpointing_integration.py  test_conversational_integration.py  test_error_handling_integration.py  test_planner_graph_integration.py  test_reactive_graph_integration.py  test_registry_integration.py  test_state_integration.py  test_streaming_integration.py
tests/integration/parsers/: test_graphql_integration.py  test_openapi_integration.py  test_postman_integration.py  test_swagger_integration.py
tests/integration/plugins/: test_pipeline_hooks.py  test_plugin_integration.py
tests/integration/pool/: test_pool_integration.py
tests/integration/ratelimit/: test_ratelimit_middleware.py
tests/snapshots/: test_generator_snapshots.py
threat-model/: index.html
tutorials/auth/: index.html
tutorials/basic/: index.html
tutorials/multi-api/: index.html
tutorials/orchestration/: index.html
(+152 files in other folders)
